# coco-flash

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
coco/: CMakeLists.txt  Flash.cpp  Flash.hpp
coco/native/coco/platform/: FlashBuffer_File.cpp  FlashBuffer_File.hpp  Flash_File.cpp  Flash_File.hpp
coco/nrf52/coco/platform/: FlashBuffer_NVMC.cpp  FlashBuffer_NVMC.hpp  Flash_NVMC.cpp  Flash_NVMC.hpp
coco/stm32/coco/platform/: Flash_FLASH.cpp  Flash_FLASH.hpp
coco/stm32f0/coco/platform/: FlashBuffer_FLASH.cpp  FlashBuffer_FLASH.hpp  Flash_FLASH.cpp  Flash_FLASH.hpp
test/: CMakeLists.txt  FlashTest.cpp
test/native/: FlashTest.hpp
test/nrf52dongle/: FlashTest.hpp
test/stm32f051discovery/: FlashTest.hpp
test/stm32f0discovery/: FlashTest.hpp
test/stm32g431nucleo/: FlashTest.hpp
